--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "less-loader": "^6.2.0",
     "mavon-editor": "^2.10.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.4"
+    "vue-router": "^3.5.4",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
