--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mavon-editor": "^2.10.4",
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
